Thu May  7 22:22:59 2015  Sho Hashimoto  <sho-h@ruby-lang.org>

	* proc.c: [DOC] fix Binding#local_variable_set example. [ci skip]

Thu May  7 11:32:57 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (rbconfig.rb): add rule to make.

Thu May  7 05:14:39 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (connect_nonblock): use IO#wait_writable
	* lib/drb/drb.rb (DRB::DRbTCPSocket#alive?): use IO#wait_readable
	* lib/webrick/httpserver.rb (run): ditto
	* lib/resolv.rb (request): ditto for single socket case
	  [ruby-core:68943] [Feature #11081]

Wed May  6 22:49:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_method_call_status): undefined refined method is
	  not callable unless using.  [ruby-core:69064] [Bug #11117]

Sun May  3 22:40:06 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* ext/-test-/file/fs.c: need to include sys/statvfs.h
	  to use statvfs().

	* ext/-test-/file/extconf.rb: check the existence of
	  sys/statvfs.h

Sun May  3 21:59:48 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/yaml.rb: fix typo. [ci skip][fix GH-890]
	  Patch by @miketheman

Sun May  3 10:02:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* range.c (linear_object_p, range_include): test if covered for
	  linear objects.  [ruby-core:69052] [Bug #11113]

Fri May  1 13:30:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_load): check if a different libruby is loaded by the
	  extension library, and then bail out to get rid of very frequent
	  reported stale bug reports.

Thu Apr 30 19:51:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): revert r46873 and r46875, not to
	  allow to execute private readers by pretending op assign.
	  [ruby-core:68984] [Bug #11096]

Thu Apr 30 17:02:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* rational.c: Added documentation for rational literal.
	  [Bug #11075][fix GH-885][ci skip] Patch by @shishir127
